Changelog
=========

8.6-dev - (unreleased)
----------------------
* Change: Simplified data and maps frontpage.
  [demarant fixes #16735]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav #15235]
* Upgrade step: Within www/portal_tinymce/@@tinymce-controlpanel
   - Add the following TinyMCE style:
     - Mark text for presentation|span|markPresentationalText
  [ichimdav refs #16879]
* Feature: added help text to presentation_view for authorised users
  [ichimdav refs #16879]
* Bug fix: Scroll content only inside the slide body for the presentation_view
  [ichimdav refs #16879]
* Bug fix: Removed some style in IE8fixes and IE9fixes for compatibility with
  other changes.
  [prospchr refs #17288]

8.5 - (2013-10-22)
------------------
* Upgrade step: From 'ZMI > portal_css' remove the 'screen css media' entry
  for ploneCustom.css
  [ichimdav refs #15235]
* Bug fix: Added hidden came_from input to login button in comments template,
  this allows proper redirection when logging in from the comments form
  [tiberich #17020]
* Change: Simplified layout for relatedItems for PDF export.
  [demarant refs #17108]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav #17037]
* Feature: Added 'related items' to PDF export
  [voineali refs #17108]
* Feature: Added honeypot to subscribe portlet
  [tiberich #17013]
* Change: added code to eea-admin.js that removes the right column for history
  and version pages
  [ichimdav refs #17037]
* Feature: Added eea-admin.js registered for authenticated users
  [ichimdav refs #17037]
* Change: Set default cover image copyright within PDF export to EEA
  [voineali refs #17009]
* Bug fix: Fixed/added  missing i18n attributes most in pdf cover.
  [prospchr refs #17141]

8.4 - (2013-10-08)
------------------
* Bug fix: fixed duplication of results within the whatsnewgallery
  data-and-maps results