@@ -5,9 +5,6 @@ from bs4 import BeautifulSoup
 from bs4.element import NavigableString
 from plone.app.layout.presentation.presentation import PresentationView
 from plone.memoize.view import memoize
-import logging
-
-logger = logging.getLogger("presentation")
 
 
 class EEAPresentationView(PresentationView):
@@ -66,7 +63,14 @@ class EEAPresentationView(PresentationView):
     def can_show_help_message(self):
         """ Check permission before displaying help text within presentation
         """
-        logger.info("called can_show")
         mtool = getToolByName(self.context, "portal_membership")
         return mtool.checkPermission('eea.daviz: Add presentation',
                                      self.context)
+
+    def default_empty_slide_help_text(self):
+        """ Returned default error
+        """
+        ptool = getToolByName(self.context, "portal_properties")
+        default_text = ptool.site_properties.getProperty(
+            'empty_slide_help_text', False)
+        return default_text
